--- a/style.css
+++ b/style.css
@@ -1,7 +1,19 @@
+.page_content{
+    max-width: 1600px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
 #menu_button{
     height: 100px;
     width: 100px;
     border-radius: 100px;
     right:0;
     bottom:0;
+}
+.d-block{
+    width: 100%;
+    height: 350px;
+    object-fit:cover;
 }
